fix: align mat-panel-description to the right

--- a/src/app/modules/search/components/detailed/detailed.component.scss
+++ b/src/app/modules/search/components/detailed/detailed.component.scss
@@ -107,3 +107,8 @@
 .mat-card-actions {
 	margin: 0;
 }
+
+.mat-expansion-panel-header-description {
+	display: flex;
+	justify-content: flex-end;
+}
